@@ -1,5 +1,6 @@
+ * Add AArch64 instruction LDNP (litmus only).
 7.23
- * Add instruction LDP (litmus only).
+ * Add AArch64 instruction LDP (litmus only).
  * Set X is also RMW (Lisa)
 7.22
   * litmus option -exit true --> exit status reflects final condition success
